# test-strawbarry

./: .env  .gitignore  .graphqlconfig  pyproject.toml
app/: apps.py  models.py  schema.py  types.py
app/fixtures/: users.json
app/graphql/: filter.graphql  pagination.graphql  search.graphql
app/graphql/mutation/: login.graphql  register.graphql
app/migrations/: 0001_first_migration.py  0002_aouth2.py  0003_permision_path.py
first/: schema.py  settings.py  urls.py
first/first/: models.py  schema.py  settings.py  types.py
