[tool.poetry]
name = "django-strawbarry"
version = "0.1.0"
description = ""
authors = ["MarionetkaX <sergey07061999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
Django = "^4.0.5"
django-oauth-toolkit = "^2.1.0"
django-cors-headers = "^3.13.0"
strawberry-graphql = "^0.116.4"
strawberry-graphql-django = "^0.3.1"
strawberry-django-plus = "^1.17.0"
strawberry-django-auth = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
